feat(components): 一些基础的布局组件等

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -8,6 +8,8 @@
 @text-tag-color: #5783f7;
 @text-gold-color: #ded1b7;
 
+@icon-main-color: #333333;
+
 @heat-border-color: #55bb8e;
 @heat-lightGreen-color: #d3ecdd;
 @heat-darkGreen-color: #55bb8e;
