feat(components): 数据请求+热力图

--- a/src/components/SearchHeader/style.less
+++ b/src/components/SearchHeader/style.less
@@ -6,8 +6,9 @@
 
     .left {
         width: 70px;
-        font-weight: bold;
-        font-size: 16px;
+        font-weight: 700;
+        font-size: 18px;
+        color: @text-title-color;
     }
 
     .right {
