--- a/src/components/UserHeader/style.less
+++ b/src/components/UserHeader/style.less
@@ -6,8 +6,9 @@
 
     .left {
         height: 65px;
-        font-weight: bold;
-        font-size: 14px;
+        font-weight: 700;
+        font-size: 18px;
+        color: @text-title-color;
         .flex();
     }
 
