--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -5,6 +5,7 @@
 @background-hover-color: #efefef;
 
 @text-main-color: #9d9d9d;
+@text-title-color: #5f5f5f;
 @text-tag-color: #5783f7;
 @text-gold-color: #ded1b7;
 
