feat(components): 青春版anyScript编辑器

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -16,10 +16,18 @@
 @heat-darkGreen-color: #55bb8e;
 
 @editor-bg-color: #ffffff;
+@editor-text-color: #323232;
+@editor-tool-color: #7d7d7d;
+@editor-toolFocus-color: #000000;
 @editor-border-color: #e8e8e8;
 @editor-tag-color: #5783f7;
+@editor-tagBg-color: #eef3fe;
+@editor-tagWrapBg-color: #222222;
+@editor-focused-border-color: #55bb8e;
+@editor-shadow-color: #dddddd;
 
 @white-color: #ffffff;
+@delete-color: #ad2121;
 
 .textOverflow(@width: 100%, @display: block) {
     width: @width;
