refactor(components): 编辑器文件结构调整

--- a/src/views/App/style.less
+++ b/src/views/App/style.less
@@ -6,7 +6,7 @@
     background-color: @background-main-color;
 
     .main {
-        width: 880px;
+        width: 890px;
         height: 100%;
         .flex();
 
@@ -24,6 +24,7 @@
         .mainWrap {
             width: 640px;
             height: 100%;
+            margin-left: 10px;
             overflow: hidden;
             .flex(flex-start, flex-start);
             flex-wrap: wrap;
