fix(styles): 一些样式调整

--- a/src/components/TheEditor/style.less
+++ b/src/components/TheEditor/style.less
@@ -21,8 +21,9 @@
         .editableWrap {
             height: 100%;
             overflow-y: auto;
-            line-height: 18px;
+            line-height: 20px;
             font-size: 14px;
+            color: @editor-text-color;
 
             &::-webkit-scrollbar {
                 display: none;
@@ -53,7 +54,8 @@
             color: @editor-tag-color;
             cursor: pointer;
             background-color: @editor-tagBg-color;
-            padding: 4px;
+            padding: 2px 4px;
+            height: 20px;
             font-size: 12px;
             border-radius: 3px;
         }
