--- a/src/components/TagsTree/style.less
+++ b/src/components/TagsTree/style.less
@@ -12,6 +12,10 @@
         width: 100%;
         margin: 8px 0 18px;
 
+        .ant-tree{
+            background: transparent;
+        }
+
         .ant-tree-treenode:nth-child(2) {
             display: none;
         }
@@ -19,6 +23,7 @@
         .ant-tree-treenode {
             width: 100%;
             height: 36px;
+            padding-bottom: 0;
             font-size: 16px;
             cursor: pointer;
             color: @text-main-color;
