feat(components): memoList获取及一些基础样式

--- a/src/views/App/style.less
+++ b/src/views/App/style.less
@@ -25,10 +25,12 @@
             width: 640px;
             height: 100%;
             margin-left: 10px;
-            overflow: hidden;
-            .flex(flex-start, flex-start);
-            flex-wrap: wrap;
-            flex-direction: column;
+            overflow-x: hidden;
+            overflow-y: auto;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
         }
     }
 }
