--- a/src/components/MemosWrap/style.less
+++ b/src/components/MemosWrap/style.less
@@ -1,12 +1,31 @@
 .memosWrap {
-    .flex(flex-start, flex-start);
-    flex-wrap: wrap;
-    flex: 1;
     width: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
+    height: auto;
+    overflow: hidden;
+    padding: 0 15px 10px;
 
-    &::-webkit-scrollbar {
-        display: none;
+    .memoItemWrap {
+        width: 100%;
+        min-height: 75px; // TODO:
+        height: auto;
+        margin: 5px 0;
+        padding: 15px;
+        background: @white-color;
+        border-radius: 6px;
+
+        &:hover{
+            box-shadow: 0 2px 16px @editor-shadow-color;
+        }
+
+        .headerWrap{
+            width: 100%;
+            height: 20px;
+            .flex(space-between);
+        }
+
+        .contentWrap{
+            width: 100%;
+            height: auto;
+        }
     }
 }
