--- a/src/components/TheEditor/style.less
+++ b/src/components/TheEditor/style.less
@@ -1,9 +1,19 @@
 .theEditorWrap {
     width: 100%;
-    padding: 10px 15px;
-    min-height: 105px; // TODO: 最大最小高度最好按照行高来
+    //padding: 10px 15px;
+    min-height: 85px; // TODO: 最大最小高度最好按照行高来
     max-height: 650px;
     height: auto;
+
+    &.readonly {
+        padding: 0;
+        min-height: 35px;
+
+        .editor {
+            padding: 10px 0 0;
+            border: none;
+        }
+    }
 
     .editor {
         padding: 15px 15px 48px 15px;
@@ -12,7 +22,7 @@
         border-radius: 5px;
         border: 1px solid @editor-border-color;
         position: relative;
-
+        cursor: text;
 
         &:focus {
             border-color: @editor-focused-border-color;
