fix(styles): tagTree样式问题

--- a/src/components/TagsTree/style.less
+++ b/src/components/TagsTree/style.less
@@ -17,7 +17,8 @@
         }
 
         .ant-tree-treenode:nth-child(2) {
-            display: none;
+            // TODO: 这个是干啥的来着？
+            //display: none;
         }
 
         .ant-tree-treenode {
