--- a/src/components/TagsTree/style.less
+++ b/src/components/TagsTree/style.less
@@ -12,7 +12,7 @@
         width: 100%;
         margin: 8px 0 18px;
 
-        .ant-tree{
+        .ant-tree {
             background: transparent;
         }
 
@@ -61,6 +61,17 @@
                             display: none;
                         }
                     }
+
+                    &.isHighLight {
+                        height: 100%;
+                        background-color: @main-color;
+                        border-radius: 5px;
+                        color: @white-color;
+
+                        .nodeRight .anticon {
+                            display: inline;
+                        }
+                    }
                 }
 
                 &:hover {
@@ -73,15 +84,10 @@
                 }
 
                 &.ant-tree-node-selected {
-                    height: 100%;
-                    background-color: @main-color;
-                    border-radius: 5px;
-                    color: @white-color;
-
-                    .nodeRight .anticon {
-                        display: inline;
-                    }
+                    background-color: transparent;
                 }
+
+
             }
         }
     }
