--- a/src/components/MemosWrap/style.less
+++ b/src/components/MemosWrap/style.less
@@ -14,23 +14,32 @@
         background: @white-color;
         border-radius: 6px;
 
-        &:hover{
+        &:hover {
             box-shadow: 0 2px 16px @editor-shadow-color;
         }
 
-        &.readonly{
+        &.readonly {
             padding: 15px;
         }
 
-        .headerWrap{
+        .headerWrap {
             width: 100%;
             height: 20px;
             .flex(space-between);
         }
 
-        .contentWrap{
+        .contentWrap {
             width: 100%;
             height: auto;
+        }
+    }
+
+    .anotherBtn {
+        width: 100%;
+        margin-top: 20px;
+
+        .ant-btn-round {
+            border-radius: 5px;
         }
     }
 }
