feat(editor): 标签改为只读模式下才高亮展示

--- a/src/components/TheEditor/style.less
+++ b/src/components/TheEditor/style.less
@@ -62,7 +62,7 @@
         }
 
         //标签
-        .tagNodeWrap {
+        .tagNodeWrap.isReadonly {
             color: @editor-tag-color;
             cursor: pointer;
             background-color: @editor-tagBg-color;
