feat(components): tagSelect支持键盘事件

--- a/src/components/TheEditor/style.less
+++ b/src/components/TheEditor/style.less
@@ -41,7 +41,8 @@
                 display: none;
             }
 
-            ul, ol {
+            ul,
+            ol {
                 margin: 0;
                 padding-inline-start: 18px;
                 border: 0;
@@ -84,7 +85,8 @@
                 color: @editor-tool-color;
                 cursor: pointer;
 
-                &:hover, &.active {
+                &:hover,
+                &.active {
                     color: @editor-toolFocus-color;
                 }
 
@@ -119,11 +121,11 @@
                 cursor: pointer;
                 margin: 3px auto;
 
+                &.activeTag,
                 &:hover {
                     color: @main-color;
                 }
             }
         }
     }
-
 }
