feat(editor): 基础的图片支持，光标处理还有些问题

--- a/src/components/TheEditor/style.less
+++ b/src/components/TheEditor/style.less
@@ -60,6 +60,21 @@
                     margin-left: -3px;
                 }
             }
+
+            .imageWrap {
+                position: relative;
+
+                img {
+                    display: block;
+                    max-width: 100%;
+                    max-height: 20em;
+
+                    &.selected,
+                    &.focused {
+                        box-shadow: 0 0 0 3px @editor-shadow-color;
+                    }
+                }
+            }
         }
 
         //标签
