feat(editor): 文本样式快捷键支持

--- a/src/components/TheEditor/style.less
+++ b/src/components/TheEditor/style.less
@@ -93,7 +93,7 @@
         }
 
         //标签
-        .tagNodeWrap.isReadonly {
+        .tagNodeWrap {
             color: @editor-tag-color;
             cursor: pointer;
             background-color: @editor-tagBg-color;
