--- a/src/components/MemosWrap/style.less
+++ b/src/components/MemosWrap/style.less
@@ -22,6 +22,26 @@
             padding: 15px;
         }
 
+        &:first-child {
+            position: relative;
+            padding-top: 30px;
+
+            &::before {
+                position: absolute;
+                content: '置顶';
+                left: 0;
+                top: 0;
+                font-size: 12px;
+                color: @white-color;
+                background: @text-gold-color;
+                width: 36px;
+                height: 36px;
+                padding-top: 7px;
+                padding-left: 4px;
+                border-radius: 0 0 100% 0;
+            }
+        }
+
         .headerWrap {
             width: 100%;
             height: 20px;
@@ -42,4 +62,5 @@
             border-radius: 5px;
         }
     }
+
 }
