fix(styles): 简单的样式调整

--- a/src/components/MemosWrap/style.less
+++ b/src/components/MemosWrap/style.less
@@ -22,7 +22,7 @@
             padding: 15px;
         }
 
-        &:first-child {
+        &:first-child.needShowTop {
             position: relative;
             padding-top: 30px;
 
