--- a/src/components/TheEditor/style.less
+++ b/src/components/TheEditor/style.less
@@ -2,7 +2,7 @@
     width: 100%;
     //padding: 10px 15px;
     min-height: 85px; // TODO: 最大最小高度最好按照行高来
-    max-height: calc(100vh - 120px);
+    //max-height: calc(100vh - 120px);
     height: auto;
 
     &.readonly {
@@ -31,7 +31,7 @@
 
         .editableWrap {
             height: 100%;
-            max-height: calc(100vh - 195px);
+            //max-height: calc(100vh - 195px);
             overflow-y: auto;
             line-height: 20px;
             font-size: 14px;
