--- a/src/views/App/style.less
+++ b/src/views/App/style.less
@@ -6,7 +6,7 @@
     background-color: @background-main-color;
 
     .main {
-        width: 890px;
+        width: 66vw;
         height: 100%;
         .flex();
 
@@ -22,7 +22,7 @@
         }
 
         .mainWrap {
-            width: 640px;
+            width: calc(66vw - 24px);
             height: 100%;
             margin-left: 10px;
             overflow-x: hidden;
